--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Timer Example</title>
+    <title>Glazing Counter</title>
 
     <style>
         body {
